# Portfolio

./: README.md
C#/restAPI/: restAPI.sln
C#/restAPI/restAPI/: MainForm.Designer.cs  MainForm.cs  Program.cs  restAPI.csproj
C++/CMakeProject2/: CMakeProject2.cpp  CMakeProject2.h
C++/Project1/: Project1.sln
C++/Project1/Project1/: Project1.vcxproj  Project1.vcxproj.filters  values.cpp
C++/WInAPI/: WindowsProject1.sln
C++/WInAPI/WindowsProject1/: WindowsProject1.vcxproj
C++/WinAPI/: CMakeLists.txt  main.cpp
C++/WinApi/: CMakeLists.txt  HELP.md  WinApi.sln
C++/helloexpress/: package-lock.json
C++/untitled1/: package.json
Jetbrain/CLion/CMakeProject1/: CMakeLists.txt  CryPy_Source.py  decrypter.cpp
Jetbrain/CLion/CMakeProject2/: CMakeLists.txt
Jetbrain/CLion/helloexpress/: package.json
Jetbrain/CLion/untitled/: main.cpp
Jetbrain/CLion/untitled1/: index.html  package-lock.json  sevrer.js
Jetbrain/PYCharm/pythonProject2/: main.py
Jetbrain/WebStorm/NodeBird/: .env  package-lock.json
Jetbrain/WebStorm/gif-chat/: package-lock.json
Node/NodeBird/views/: error.pug  join.pug  layout.html  layout.pug
Python/Ai/: HELP.md  main.py  mian.ipynb
Python/RansomWare/: HELP.md  RansomWare1.py  RansomWare2.py
Python/SQLGUI/: HELP.md  main.py
Python/SQLGUI/txt/: password.txt
Python/pythonProject/: main.py
SpringBoot/SG/: build.gradle  settings.gradle
SpringBoot/spring-webservice/: .gitignore  build.gradle
SpringBoot/spring-webservice/.jpb/: persistence-units.xml
assembly/: HELP.md  HelloWorld.asm  HelloWorld2.asm  HelloWorld3.asm
(+65 files in other folders)
